fix:lightens the white cards bg color for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ div .card-header {
 }
 
 #white-card-body {
-    background-color: #bbbbbb;
+    background-color: #eee;
 }
 
 .psyc-list {
@@ -237,14 +237,15 @@ div .card-header {
 
 /* ............................................MEDIA PAGE STYLE */
 
-#media-section iframe, 
+/* #media-section iframe, 
 #media-section img {
     background-color: #9843b4;
     position: relative;
     background-position: center;
     background-size: contain;
     max-width:600px;
-}
+} */
+
 /* ............................................SCIENCE PAGE STYLE */
 
 #mantis-shrimp a,
